src/components/Layout/Footer/style.module.less
@import '../../style/vars.less';

.footer {
  background: @red;
  color: @greyBright;
  min-height: 15rem;
  padding: 3rem 0 6rem;
  font-size: @DesktopFontSizeM;
  --secondary-color: @white;
  text-align: center;

  @media (max-width: @breakPointS) {
    padding: 3rem;
  }
}

.itemContainer {
  width: @headerWidth;
  justify-content: space-between;
  margin: auto;

  @media (max-width: @breakPointXL) {
    width: 100%;
  }
}

.nav {
  list-style: none;
  padding: 0;
  margin: -0.5rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;

  @media (max-width: @breakPointM) {
    width: 100%;
    display: block;
    margin: 0rem 0 2rem;
    line-height: 3rem;
  }
}

.navItem {
  margin: 0;
  display: inline;
  margin: 0.5rem;
  display: block;

  @media (max-width: @breakPointM) {
    margin: 0;
  }
}

.link {
  .linkUnderlined();

  &:hover {
    .menuLink();
  }
}

.socialMedia {
  margin: 2rem 0;
}

.partnerLogos {
  margin: 1rem 0 0;
}

